@@ -28,6 +28,7 @@ Release 0.9.3
 - add class loader support for filesnames a la [class name].class.php
 - improve logging
 - add exception handler to ZMLogging
+- change ZMRegexpRule to use preg_match and be case sensitive
 
 Release 0.9.2
 - add database support for data type blob
